--- a/OtoGalarim/app/src/main/AndroidManifest.xml
+++ b/OtoGalarim/app/src/main/AndroidManifest.xml
@@ -28,7 +28,10 @@
         <activity android:name=".MainActivity" />
         <activity
             android:name=".RegisterActivity"
-            android:label="@string/title_activity_register"></activity>
+            android:label="@string/title_activity_register" />
+        <activity
+            android:name=".DogrulamaActivity"
+            android:label="@string/title_activity_dogrulama"></activity>
     </application>
 
 </manifest>
