araç ilan yayınlamak için layout tasarımları tamamlandı.

--- a/OtoGalarim/app/src/main/AndroidManifest.xml
+++ b/OtoGalarim/app/src/main/AndroidManifest.xml
@@ -34,7 +34,10 @@
             android:label="@string/title_activity_dogrulama" />
         <activity android:name=".AdresBilgileri" />
         <activity android:name=".AracBilgileri" />
-        <activity android:name=".IlanTuru"></activity>
+        <activity android:name=".IlanTuru" />
+        <activity android:name=".MotorPerformans" />
+        <activity android:name=".Yakit" />
+        <activity android:name=".IlanResimler"></activity>
     </application>
 
 </manifest>
