--- a/OtoGalarim/app/src/main/AndroidManifest.xml
+++ b/OtoGalarim/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         <activity android:name=".MotorPerformans" />
         <activity android:name=".Yakit" />
         <activity android:name=".IlanResimler" />
-        <activity android:name=".IlanBilgileri"></activity>
+        <activity android:name=".IlanBilgileri" />
     </application>
 
 </manifest>
