--- a/OtoGalarim/app/src/main/AndroidManifest.xml
+++ b/OtoGalarim/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -40,6 +40,9 @@
         <activity android:name=".Yakit" />
         <activity android:name=".IlanResimler" />
         <activity android:name=".IlanBilgileri" />
+        <activity android:name=".Ilanlarim" />
+        <activity android:name=".Ilanlar" />
+        <activity android:name=".IlanDetay"></activity>
     </application>
 
 </manifest>
